Fix (correctly) sized iframely images being blurry due to the border being included in their size

--- a/plugins/nodebb-plugin-tdwtf-customizations/custom.less
+++ b/plugins/nodebb-plugin-tdwtf-customizations/custom.less
@@ -73,6 +73,8 @@ kbd, kbd kbd {
 		max-height: 600px;
 		object-fit: contain;
 		display: inline;
+		-moz-box-sizing: content-box;
+		box-sizing: content-box;
 	}
 
 	/* Differentiate strike/del */
